# ChangeLog for dev-lisp/cl-iterate
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-lisp/cvs-repo/gentoo-x86/dev-lisp/cl-iterate/Attic/ChangeLog,v 1.7 2005/04/16 20:34:24 mkennedy Exp $

  16 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org>
  -cl-iterate-1.0.4.ebuild, -cl-iterate-1.0.7.ebuild:
  Keywording; Removed old ebuilds

  21 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org>
  cl-iterate-1.3_pre1.ebuild:
  Keywording for ~amd64

  21 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> :
  Keywording for cl-iterate-1.3_pre1.ebuild

*cl-iterate-1.3_pre1 (28 Dec 2004)

  28 Dec 2004; Matthew Kennedy <mkennedy@gentoo.org>
  +cl-iterate-1.3_pre1.ebuild:
  New upstream version

  28 Aug 2004; David Holm <dholm@gentoo.org> cl-iterate-1.0.7.ebuild:
  Added to ~ppc.

*cl-iterate-1.0.7 (04 Aug 2004)

  04 Aug 2004; <mkennedy@gentoo.org> +cl-iterate-1.0.7.ebuild:
  New upstream version

*cl-iterate-1.0.4 (14 May 2004)

  14 May 2004; <mkennedy@gentoo.org> +metadata.xml, +cl-iterate-1.0.4.ebuild:
  Initial port.  Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>
