@@ -1,4 +1,6 @@
-MD5 d2adf5ef63b36316ca46ab1235e25a2c ChangeLog 1104
+MD5 6b823d0b04b20c6b4dc75901b12f987c ChangeLog 1257
+MD5 cf9e5df82e81d6c79f914b25ee02ea30 cl-iterate-1.4.ebuild 885
 MD5 c9a31f5e059706a0281d6f1f7a63dbd0 cl-iterate-1.3_pre1.ebuild 803
 MD5 9b65b0341efc8f4b29498aad23315229 metadata.xml 164
+MD5 da7a791a2f9d23f52b8ec102bb233b8d files/digest-cl-iterate-1.4 63
 MD5 a69220c83c3ee59a8f2e0d8c876dc3d2 files/digest-cl-iterate-1.3_pre1 68
