@@ -1,6 +1,11 @@
 # ChangeLog for dev-lisp/cl-iterate
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lisp/cvs-repo/gentoo-x86/dev-lisp/cl-iterate/Attic/ChangeLog,v 1.7 2005/04/16 20:34:24 mkennedy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lisp/cvs-repo/gentoo-x86/dev-lisp/cl-iterate/Attic/ChangeLog,v 1.8 2005/05/11 04:55:40 mkennedy Exp $
+
+*cl-iterate-1.4 (11 May 2005)
+
+  11 May 2005; Matthew Kennedy <mkennedy@gentoo.org> +cl-iterate-1.4.ebuild:
+  New upstream version; Resolves Bug #91636
 
   16 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org>
   -cl-iterate-1.0.4.ebuild, -cl-iterate-1.0.7.ebuild:
